[feature] adicionar endpoints de get usuario pelo email e atualizar a senha.
